--- a/frontend/src/components/SkeletonOrder/ShopFoodDetail/foodDetail.module.css
+++ b/frontend/src/components/SkeletonOrder/ShopFoodDetail/foodDetail.module.css
@@ -19,3 +19,16 @@
     background: #ecf6fd;
 }
 
+.priceSpan {
+    color: rgb(210, 10, 10);
+    font-size: 16px;
+}
+
+.colLineHeight{
+    line-height: 32px;
+}
+
+.totalContaner {
+    line-height: 32px;
+    text-align: right;
+}
