--- a/frontend/src/components/Login/login.module.css
+++ b/frontend/src/components/Login/login.module.css
@@ -45,13 +45,12 @@
 
 .login-section{
     width: 380px;
-    height: 315px;
     position: absolute;
     top: 50vh;
     right: 12%;
     transform: translateY(-50%);
     z-index: 9;
-    padding: 12px 30px;
+    padding: 12px 30px 40px 30px;
     box-sizing: border-box;
     background-color: rgba(255,255,255,.95);
     border-radius: 5px;
@@ -61,13 +60,12 @@
 
 .register-section{
     width: 380px;
-    height: 410px;
     position: absolute;
     top: 50vh;
     right: 12%;
     transform: translateY(-50%);
     z-index: 9;
-    padding: 12px 30px;
+    padding: 12px 30px 40px 30px;
     box-sizing: border-box;
     background-color: rgba(255,255,255,.95);
     border-radius: 5px;
